--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,3 +1,4 @@
+<div class="full-page-container">
 <div class="container-fluid container-show">
 
     <%# Equipment Section %>
@@ -59,11 +60,12 @@
                         </svg>
                     </div>
                     <div class="content">
-                        <p class="message">Your booking is confirmed:</p>
+                        <p class="message"> Booking confirmed:</p>
                         <p>Booked: <%= booking.start_date %> to <%= booking.end_date %> by <%= booking.user.email %></p>
                     </div>
                 </div>
             </div>
                  <% end %>
     </div>
+  </div>
 </div>
